# MIB-EGrabber

./: CMakeLists.txt  README.md  TODO.md  vcpkg.json
tests/: CMakeLists.txt  test_image_processing.cpp  test_mib_grabber.cpp
tools/: CMakeLists.txt
tools/circularity_visualizer/: CMakeLists.txt  circularity_visualizer.cpp
